--- a/lecture6/plat_drv-overlay.dts
+++ b/lecture6/plat_drv-overlay.dts
@@ -13,7 +13,10 @@
       /* instance:type */
       plat_drv: plat_drv@0 {
         /* Label to match in driver */
+
         compatible = "ase, plat_drv";
+	gpios = <&gpio 12 0>, <&gpio 16 0>;
+
         status = "okay";
       };
     };
