--- a/lecture6/plat_drv-overlay.dts
+++ b/lecture6/plat_drv-overlay.dts
@@ -15,8 +15,8 @@
         /* Label to match in driver */
 
         compatible = "ase, plat_drv";
-	gpios = <&gpio 12 0>, <&gpio 16 0>, <&gpio 26 1>;
-	rhino_custom = <0x0000001C>;
+	gpios = <&gpio 12 0>, <&gpio 16 0>, <&gpio 26 1>, <&gpio 20 1>, <&gpio 21 1>;
+	rhino_custom = <0x00000014>;
         status = "okay";
       };
     };
